Added new tasks